# splunk-agentic-evals

./: .gitignore  README.md  example.py  otel-collector-config.yaml  pyproject.toml
docs/: product-brief.md
splunk_agentic_evals/: __init__.py  config.py  emitter.py  evaluator.py  judge.py  processor.py
splunk_agentic_evals/evals/: __init__.py  base.py  builtin.py  custom.py
test_agent/: agent.py  run.py  tools.py
tests/: test_evals_builtin.py  test_evals_custom.py  test_evaluator.py  test_judge.py  test_processor.py
